@@ -163,7 +163,7 @@
 	</extension>
 </addon>
 
-<addon id="service.playit" name="PlayIt" version="0.1.5"
+<addon id="service.playit" name="PlayIt" version="0.1.6"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
