@@ -7,4 +7,4 @@ Created on Dec 27, 2011
 import TurtleService
 
 if __name__ == '__main__':
-    TurtleService.start(__addon_id__, 'PlayIt', '/PlayIt', 8181, [8100, 8199])
+    TurtleService.start('service.playit', 'PlayIt', '/PlayIt', 8181, [8100, 8199])
